err/libxml2dom.err
Listing '.'...
Listing './bin'...
Compiling './bin/libxml2macro.py'...
***   File "./bin/libxml2macro.py", line 252
    print "libxml2macro.py <module-filename>"
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/libxml2dom'...
Compiling './lib/python3.5/site-packages/libxml2dom/__init__.py'...
***   File "./lib/python3.5/site-packages/libxml2dom/__init__.py", line 151
    raise KeyError, name
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libxml2dom/macrolib'...
Compiling './lib/python3.5/site-packages/libxml2dom/macrolib/macrolib.py'...
***   File "./lib/python3.5/site-packages/libxml2dom/macrolib/macrolib.py", line 48
    raise TypeError, "Please use Unicode for non-ASCII data."
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libxml2dom/svg.py'...
***   File "./lib/python3.5/site-packages/libxml2dom/svg.py", line 178
    raise NotImplementedError, "createConnection"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libxml2dom/xmlrpc.py'...
***   File "./lib/python3.5/site-packages/libxml2dom/xmlrpc.py", line 90
    raise ValueError, "Value %r cannot be serialised." % value
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libxml2dom-0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
